tests/corpus/negative/N15-list-method/source.py
def remove_last(values):
    values.pop()
    return values
